--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   get: ^4.3.8
   lucide_icons: ^0.257.0
   icons_plus: ^5.0.0
+  image_picker: ^1.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
